Update all guides and Readme

--- a/experiments/5_initialization/train.ipynb
+++ b/experiments/5_initialization/train.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "cwd = os.path.join(os.getcwd(), '..', '..')\n",
-    "p_indian_list = [0.005, 0.01, 0.05,\n",
+    "p_english_list = [0.005, 0.01, 0.05,\n",
     "                 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9,\n",
     "                 0.95, 0.99, 0.995]\n",
     "out_rate = 1000"
@@ -62,10 +62,10 @@
     "\n",
     "    Parameters\n",
     "    ----------\n",
-    "    p_indian : float (p_indian_list)\n",
-    "        Proportion of audios of people with indian accent in the dataset.\n",
+    "    p_english : float (p_english_list)\n",
+    "        Proportion of audios of people with english accent in the dataset.\n",
     "    idx : int [0, 9]\n",
-    "        Index of the annotations to be used. For each ``p_indian`` there are 10\n",
+    "        Index of the annotations to be used. For each ``p_english`` there are 10\n",
     "        datasets.\n",
     "    set : str\n",
     "        Indicates which dataset is to be loaded.\n",
@@ -76,21 +76,21 @@
     "    \"\"\"\n",
     "    \n",
     "    def __init__(self,\n",
-    "                 p_indian,\n",
+    "                 p_english,\n",
     "                 idx,\n",
     "                 set=\"train_df.tsv\",\n",
     "                 transform=None):\n",
     "        \n",
-    "        global p_indian_list\n",
-    "        if (p_indian not in p_indian_list) or ((idx < 0) or (idx > 9)):\n",
+    "        global p_english_list\n",
+    "        if (p_english not in p_english_list) or ((idx < 0) or (idx > 9)):\n",
     "            raise ValueError(\n",
-    "                f'`p_indian` can only take values within {p_indian_list}, '\n",
+    "                f'`p_english` can only take values within {p_english_list}, '\n",
     "                f'and `idx` should be between 0 and 9')\n",
     "        \n",
     "        global cwd\n",
     "        self.dataset = torchaudio.datasets.COMMONVOICE(\n",
     "            root=os.path.join(cwd, 'CommonVoice'),\n",
-    "            tsv=os.path.join('datasets', str(p_indian), str(idx), set))\n",
+    "            tsv=os.path.join('datasets', str(p_english), str(idx), set))\n",
     "        self.transform = transform\n",
     "\n",
     "    def __len__(self):\n",
@@ -141,20 +141,20 @@
     "    return torch.utils.data.dataloader.default_collate(batch)\n",
     "\n",
     "\n",
-    "def load_data(p_indian, idx, batch_size):\n",
+    "def load_data(p_english, idx, batch_size):\n",
     "    \"\"\"Loads dataset performing the required transformations for train or test.\"\"\"\n",
     "    \n",
     "    # Load datasets\n",
     "    global transform\n",
-    "    train_dataset = CustomCommonVoice(p_indian,\n",
+    "    train_dataset = CustomCommonVoice(p_english,\n",
     "                                      idx,\n",
     "                                      set=\"train_df.tsv\",\n",
     "                                      transform=transform)\n",
-    "    val_dataset = CustomCommonVoice(p_indian,\n",
+    "    val_dataset = CustomCommonVoice(p_english,\n",
     "                                    idx,\n",
     "                                    set=\"val_df.tsv\",\n",
     "                                    transform=transform)\n",
-    "    test_dataset = CustomCommonVoice(p_indian,\n",
+    "    test_dataset = CustomCommonVoice(p_english,\n",
     "                                     idx,\n",
     "                                     set=\"test_df.tsv\",\n",
     "                                     transform=transform)\n",
@@ -176,16 +176,16 @@
     "    return train_loader, val_loader, test_loader\n",
     "\n",
     "\n",
-    "def load_sketch_samples(p_indian, idx, batch_size):\n",
+    "def load_sketch_samples(p_english, idx, batch_size):\n",
     "    \"\"\"Loads sketch samples to tensorize models.\"\"\"\n",
     "    \n",
     "    # Load datasets\n",
     "    global transform\n",
-    "    test_tensorize_dataset = CustomCommonVoice(p_indian,\n",
+    "    test_tensorize_dataset = CustomCommonVoice(p_english,\n",
     "                                               idx,\n",
     "                                               set=\"test_df_tensorize.tsv\",\n",
     "                                               transform=transform)\n",
-    "    test_unused_dataset = CustomCommonVoice(p_indian,\n",
+    "    test_unused_dataset = CustomCommonVoice(p_english,\n",
     "                                            idx,\n",
     "                                            set=\"test_df_unused.tsv\",\n",
     "                                            transform=transform)\n",
@@ -352,7 +352,7 @@
     "    \"\"\"Retrains best MPS models\"\"\"\n",
     "    print(init_method, embedding_fn, renormalize, bond_dim, n_epochs)\n",
     "    \n",
-    "    global p_indian_list\n",
+    "    global p_english_list\n",
     "    \n",
     "    device = torch.device(f'cuda' if torch.cuda.is_available() else 'cpu')\n",
     "    \n",
@@ -591,7 +591,7 @@
     }
    ],
    "source": [
-    "global p_indian_list\n",
+    "global p_english_list\n",
     "    \n",
     "device = torch.device(f'cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
